# graphutils

./: .gitignore  CMakeLists.txt  Dockerfile  GraphUtilsConfig.h.in  Makefile  README.md  cmakung  runTest.sh  sampleGraphMaker.cpp  smartifier.cpp  testRunner.sh
include/: GraphUtilsConfig.h.in
src/: CommandLineParsing.cpp  CommandLineParsing.h  sampleGraphMaker.cpp  smartifier.cpp  smartifier2.cpp
testCase/: test_profiles_known.csv  test_profiles_known.jsonl  test_profiles_special.jsonl  test_profiles_special_known.jsonl  test_profiles_special_withdefault_known.jsonl  test_relations_known.csv  test_relations_known.jsonl  test_relations_special.jsonl  test_relations_special_known.jsonl  test_relations_special_withdefault_known.jsonl
tests/test_2vertexcolls/: e1.csv  e1_expected.csv  e2.csv  e2_expected.csv  todo.sh  v1.csv  v1_expected.csv  v2.csv  v2_expected.csv
tests/test_csv/: profiles.csv  profiles_expected.csv  relations_expected.csv  todo.sh
tests/test_jsonl/: profiles.jsonl  profiles_expected.jsonl  relations_expected.jsonl  todo.sh
tests/test_keyvalue2_csv/: profiles.csv  profiles_expected.csv  relations.csv  relations_expected.csv  todo.sh
tests/test_keyvalue_csv/: profiles.csv  profiles_expected.csv  relations.csv  todo.sh
tests/test_keyvalue_jsonl/: profiles.jsonl  profiles_expected.jsonl  relations.jsonl  todo.sh
tests/test_smartindex/: e1.csv  e1_expected.csv  e2.csv  e2_expected.csv  todo.sh  v1.csv  v1_expected.csv  v2.csv  v2_expected.csv
